--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-image-lightbox": "^5.1.1",
     "react-scripts": "4.0.0",
     "react-stack-grid": "^0.7.1",
     "reactstrap": "^8.7.1",
+    "simple-react-lightbox": "^3.3.4-2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
