--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^3.11.0",
     "react-image-lightbox": "^5.1.1",
     "react-scripts": "4.0.0",
     "react-stack-grid": "^0.7.1",
